Modificando estructura del proyecto en imágenes y rutas relativas de las mismas

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <div class="wrapper header__container">
             <div class="header__mobile">
                 <a class="logo" href="#">
-                    <img src="/src/images/Logo.svg" alt="logo alexander">
+                    <img src="/src/images/logos/Logo.svg" alt="logo alexander">
                 </a>
 
-                <img class="navigation__icon" src="/src/images/hamburger-btn.svg" alt="hamburguer menu">
+                <img class="navigation__icon" src="/src/images/icons/hamburger-btn.svg" alt="hamburguer menu">
             </div>
 
             <nav class="navigation">
@@ -69,8 +69,8 @@
                     <p class="perfil__occupation">FrontEnd Developer</p>
                 </div>
                 <div class="social-media">
-                    <a class="social-media__links social-media__links--github" href="#">Github</a>
-                    <a class="social-media__links social-media__links--linkedin" href="#">Linkedin</a>
+                    <a class="social-media__links social-media__links--github" href="https://github.com/EduardoPosas" target="_blank">Github</a>
+                    <a class="social-media__links social-media__links--linkedin" href="https://www.linkedin.com/in/alexanderposas/" target="_blank">Linkedin</a>
                     <a class="social-media__links social-media__links--instagram" href="#">Instagram</a>
                 </div>
             </div>
@@ -160,18 +160,17 @@
             <div class="education-cards">
                 <div class="education-card">
                     <div class="education-card__image">
-                        <img src="/src/images/ipn-logo.svg" alt="ipn institute">
+                        <img src="/src/images/logos/ipn-logo.svg" alt="ipn institute">
                     </div>
                     <div class="education-card__description">
                         <h3 class="education-card__topic">Control and Automation Engineering</h3>
-                        <p class="education-card__academy"><span class="education-card__year">2018 - </span> National
-                            Polytechnic Institute</p>
+                        <p class="education-card__academy"><span class="education-card__year">2018 - </span> National Polytechnic Institute</p>
                         <a href="https://www.ipn.mx/oferta-educativa/educacion-superior/ver-carrera.html?lg=es&id=7&nombre=Ingenier%C3%ADa-en-Control-y-Automatizaci%C3%B3n" class="pill pill--primary" target="_blank">Program</a>
                     </div>
                 </div> <!--education-card-->
                 <div class="education-card">
                     <div class="education-card__image">
-                        <img src="/src/images/udemy-logo.svg" alt="udemy institute">
+                        <img src="/src/images/logos/udemy-logo.svg" alt="udemy institute">
                     </div>
                     <div class="education-card__description">
                         <h3 class="education-card__topic">Web Development</h3>
@@ -181,7 +180,7 @@
                 </div> <!--education-card-->
                 <div class="education-card">
                     <div class="education-card__image">
-                        <img src="/src/images/udemy-logo.svg" alt="udemy institute">
+                        <img src="/src/images/logos/udemy-logo.svg" alt="udemy institute">
                     </div>
                     <div class="education-card__description">
                         <h3 class="education-card__topic">Modern Javascript</h3>
@@ -191,7 +190,7 @@
                 </div> <!--education-card-->
                 <div class="education-card">
                     <div class="education-card__image">
-                        <img src="/src/images/alura-logo.svg" alt="alura latam">
+                        <img src="/src/images/logos/alura-logo.svg" alt="alura latam">
                     </div>
                     <div class="education-card__description">
                         <h3 class="education-card__topic">Business Agility</h3>
@@ -202,7 +201,7 @@
                 </div> <!--education-card-->
                 <div class="education-card">
                     <div class="education-card__image">
-                        <img src="/src/images/alura-logo.svg" alt="alura latam">
+                        <img src="/src/images/logos/alura-logo.svg" alt="alura latam">
                     </div>
                     <div class="education-card__description">
                         <h3 class="education-card__topic">CSS Arquitecture</h3>
@@ -213,11 +212,11 @@
                 </div> <!--education-card-->
                 <div class="education-card">
                     <div class="education-card__image">
-                        <img src="/src/images/alura-logo.svg" alt="alura latam">
+                        <img src="/src/images/logos/alura-logo.svg" alt="alura latam">
                     </div>
                     <div class="education-card__description">
                         <h3 class="education-card__topic">Oracle Next Education Program FrontEnd</h3>
-                        <p class="education-card__academy"><span class="education-card__year">En Curso - </span> Alura
+                        <p class="education-card__academy"><span class="education-card__year">In progress - </span> Alura
                             Latam</p>
                         <a href="https://www.oracle.com/mx/education/oracle-next-education/" class="pill pill--primary" target="_blank">Program</a>
                     </div>
