Agregando característica de sección en diagonal para about, education & about

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
     </section>
 
-    <section class="about" id="about">
+    <section class="about diagonal-shape" id="about">
         <div class="wrapper about__container">
             <h2 class="about__title">About Me</h2>
             <p class="about__text">I am an engineer in control and automation graduate of the National Institute
@@ -154,7 +154,7 @@
         </div>
     </section>
 
-    <section class="education" id="education">
+    <section class="education diagonal-shape" id="education">
         <h2 class="education__title">Education and Certifications</h2>
         <div class="wrapper">
             <div class="education-cards">
@@ -275,7 +275,7 @@
         </div>
     </section>
 
-    <section class="contact" id="contact">
+    <section class="contact diagonal-shape" id="contact">
         <div class="wrapper">
             <div class="contact__container">
                 <div contact__form>
