--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="social-media">
                     <a class="social-media__links social-media__links--github" href="https://github.com/EduardoPosas" target="_blank">Github</a>
                     <a class="social-media__links social-media__links--linkedin" href="https://www.linkedin.com/in/alexanderposas/" target="_blank">Linkedin</a>
-                    <a class="social-media__links social-media__links--instagram" href="#">Instagram</a>
+                    <a class="social-media__links social-media__links--instagram" href="https://www.instagram.com/alexander_pozas/?igshid=MzNlNGNkZWQ4Mg%3D%3D">Instagram</a>
                 </div>
             </div>
         </div>
@@ -85,6 +85,7 @@
                 discovered this incredible world, I wanted to become a web developer. I consider myself a
                 well-organized, self-taught and responsible individual who enjoys learning new things on a daily basis.
             </p>
+            <a class="experience__button experience__button--primary" download="alexanderPozasCurriculm.pdf" href="src/files/alexanderCurriculum.pdf">Curriculum</a>
         </div>
     </section>
 
@@ -119,7 +120,7 @@
                 <p class="skill__description skill__description--git">Git</p>
             </div>
             <div class="skill">
-                <p class="skill__description skill__description--figma">figma</p>
+                <p class="skill__description skill__description--figma">Figma</p>
             </div>
         </div>
     </section>
@@ -165,7 +166,7 @@
                     <div class="education-card__description">
                         <h3 class="education-card__topic">Control and Automation Engineering</h3>
                         <p class="education-card__academy"><span class="education-card__year">2018 - </span> National Polytechnic Institute</p>
-                        <a href="https://www.ipn.mx/oferta-educativa/educacion-superior/ver-carrera.html?lg=es&id=7&nombre=Ingenier%C3%ADa-en-Control-y-Automatizaci%C3%B3n" class="pill pill--primary" target="_blank">Program</a>
+                        <a href="https://www.ipn.mx/oferta-educativa/educacion-superior/ver-carrera.html?lg=es&id=7&nombre=Ingenier%C3%ADa-en-Control-y-Automatizaci%C3%B3n" class="pill pill--secondary" target="_blank">Program</a>
                     </div>
                 </div> <!--education-card-->
                 <div class="education-card">
@@ -175,7 +176,7 @@
                     <div class="education-card__description">
                         <h3 class="education-card__topic">Web Development</h3>
                         <p class="education-card__academy"><span class="education-card__year">2020 - </span> Udemy</p>
-                        <a href="https://www.udemy.com/certificate/UC-3f939403-20e6-4e1f-a1ea-5879a5c54de3/" class="pill pill--primary" target="_blank">Certificate</a>
+                        <a href="https://www.udemy.com/certificate/UC-3f939403-20e6-4e1f-a1ea-5879a5c54de3/" class="pill pill--secondary" target="_blank">Certificate</a>
                     </div>
                 </div> <!--education-card-->
                 <div class="education-card">
@@ -185,7 +186,7 @@
                     <div class="education-card__description">
                         <h3 class="education-card__topic">Modern Javascript</h3>
                         <p class="education-card__academy"><span class="education-card__year">2020 - </span> Udemy</p>
-                        <a href="https://www.udemy.com/certificate/UC-a6728cbf-ce30-438e-815c-4c027cb29fa0/" class="pill pill--primary" target="_blank">Certificate</a>
+                        <a href="https://www.udemy.com/certificate/UC-a6728cbf-ce30-438e-815c-4c027cb29fa0/" class="pill pill--secondary" target="_blank">Certificate</a>
                     </div>
                 </div> <!--education-card-->
                 <div class="education-card">
@@ -196,7 +197,7 @@
                         <h3 class="education-card__topic">Business Agility</h3>
                         <p class="education-card__academy"><span class="education-card__year">2023 - </span> Alura Latam
                         </p>
-                        <a href="https://app.aluracursos.com/degree/certificate/01fb4063-74e6-4e61-b0b8-08f4513ff528" class="pill pill--primary" target="_blank">Certificate</a>
+                        <a href="https://app.aluracursos.com/degree/certificate/01fb4063-74e6-4e61-b0b8-08f4513ff528" class="pill pill--secondary" target="_blank">Certificate</a>
                     </div>
                 </div> <!--education-card-->
                 <div class="education-card">
@@ -207,7 +208,7 @@
                         <h3 class="education-card__topic">CSS Arquitecture</h3>
                         <p class="education-card__academy"><span class="education-card__year">2023 - </span> Alura Latam
                         </p>
-                        <a href="https://app.aluracursos.com/certificate/a-posas/arquitectura-css-descomplicando-los-problemas" class="pill pill--primary" target="_blank">Certificate</a>
+                        <a href="https://app.aluracursos.com/certificate/a-posas/arquitectura-css-descomplicando-los-problemas" class="pill pill--secondary" target="_blank">Certificate</a>
                     </div>
                 </div> <!--education-card-->
                 <div class="education-card">
@@ -215,10 +216,10 @@
                         <img src="/src/images/logos/alura-logo.svg" alt="alura latam">
                     </div>
                     <div class="education-card__description">
-                        <h3 class="education-card__topic">Oracle Next Education Program FrontEnd</h3>
+                        <h3 class="education-card__topic">Oracle Next Education Program  - FrontEnd</h3>
                         <p class="education-card__academy"><span class="education-card__year">In progress - </span> Alura
                             Latam</p>
-                        <a href="https://www.oracle.com/mx/education/oracle-next-education/" class="pill pill--primary" target="_blank">Program</a>
+                        <a href="https://www.oracle.com/mx/education/oracle-next-education/" class="pill pill--secondary" target="_blank">Program</a>
                     </div>
                 </div> <!--education-card-->
             </div>
@@ -234,7 +235,11 @@
                 </div>
                 <div class="experience__content">
                     <h3 class="experience__title">Music Festival</h3>
-                    <p class="experience__description">Developed in web certification</p>
+                    <div class="experience__description">
+                        <p class="experience__technology">HTML</p>
+                        <p class="experience__technology">SCSS</p>
+                        <p class="experience__technology">Javascript</p>
+                    </div>
                     <a target="_blank" href="https://github.com/EduardoPosas/festivalMusica.git" class="pill pill--secondary">Repository</a>
                     <a target="_blank" href="https://musicfestscss-portfolio.netlify.app/" class="pill pill--primary">Demo</a>
                 </div>
@@ -245,7 +250,11 @@
                 </div>
                 <div class="experience__content">
                     <h3 class="experience__title">Furniture Store</h3>
-                    <p class="experience__description">Developed in web certification</p>
+                    <div class="experience__description">
+                        <p class="experience__technology">HTML</p>
+                        <p class="experience__technology">CSS</p>
+                        <p class="experience__technology">Javascript</p>
+                    </div>
                     <a target="_blank" href="https://github.com/EduardoPosas/tiendaMuebles.git" class="pill pill--secondary">Repository</a>
                     <a target="_blank" href="https://ecommerce-html-css-js-alex.netlify.app/" class="pill pill--primary">Demo</a>
                 </div>
@@ -256,7 +265,11 @@
                 </div>
                 <div class="experience__content">
                     <h3 class="experience__title">Veterinary Control</h3>
-                    <p class="experience__description">Developed in modern js development</p>
+                    <div class="experience__description">
+                        <p class="experience__technology">React</p>
+                        <p class="experience__technology">Tailwind</p>
+                        <p class="experience__technology">Vite</p>
+                    </div>
                     <a target="_blank" href="https://github.com/EduardoPosas/citas-react-vite.git" class="pill pill--secondary">Repository</a>
                     <a target="_blank" href="https://magenta-mochi-81fe62.netlify.app/" class="pill pill--primary">Demo</a>
                 </div>
@@ -267,7 +280,11 @@
                 </div>
                 <div class="experience__content">
                     <h3 class="experience__title">Text Encoder</h3>
-                    <p class="experience__description">Challenge Orcle</p>
+                    <div class="experience__description">
+                        <p class="experience__technology">HTML</p>
+                        <p class="experience__technology">CSS</p>
+                        <p class="experience__technology">Javascript</p>
+                    </div>
                     <a target="_blank" href="https://github.com/EduardoPosas/Encriptador.git" class="pill pill--secondary">Repository</a>
                     <a target="_blank" href="https://eduardoposas.github.io/Encriptador/" class="pill pill--primary">Demo</a>
                 </div>
